[project]
name = "laplace-torch"
version = "0.2.1"
description = "laplace - Laplace approximations for deep learning"
readme = "README.md"
authors = [
  { name = "Alex Immer" },
  { name = "Runa Eschenhagen" },
  { name = "Agustinus Kristiadi" },
  { name = "Erik Daxberger" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "asdfghjkl == 0.1a4",
  "backpack-for-pytorch",
  "curvlinops-for-pytorch >= 2.0",
  "numpy",
  "opt_einsum",
  "torch >= 2.0",
  "torchaudio >= 2.0",
  "torchmetrics",
  "torchvision >= 0.15",
]

[project.urls]
Homepage = "https://github.com/aleximmer/Laplace"
"Bug Tracker" = "https://github.com/aleximmer/Laplace/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["laplace"]

[project.optional-dependencies]
dev = [
  "coveralls",
  "matplotlib",
  "pdoc3",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "ruff",
  "scipy",
]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# Adds isort ("I") and pylint errors and warning ("PLE", "PLW") to defaults.
select = ["E4", "E7", "E9", "F", "I", "PLE", "PLW"]
# Ignore pylint's overwritten loop variable by assignment error
# Skip "Module level import not at top of file"
ignore = ["PLW2901", "E402"]
