###############################################################################
#                                 Main library                                #
###############################################################################

[metadata]
name = laplace-torch
version = 0.1a2
author = Alex Immer
url = https://github.com/AlexImmer/Laplace
project_urls =
    Bug Tracker = https://github.com/AlexImmer/Laplace/issues
description = laplace - Laplace approximations for deep learning
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
# Dependencies of the project (semicolon/line-separated):
install_requires =
    torch
    torchvision
    torchaudio
    backpack-for-pytorch
    asdfghjkl
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.8

[options.packages.find]
exclude = tests*

###############################################################################
#                           Development dependencies                          #
###############################################################################

[options.extras_require]
# Dependencies needed to run the tests  (semicolon/line-separated)
tests =
    pytest
    pytest-cov
    coveralls
    scipy

# Dependencies needed to build/view the documentation (semicolon/line-separated)
docs =
    matplotlib
    pdoc3

