###############################################################################
#                                 Main library                                #
###############################################################################

[metadata]
name = laplace-torch
version = 0.2.1
author = Alex Immer, Runa Eschenhagen, Agustinus Kristiadi, Erik Daxberger
url = https://github.com/aleximmer/Laplace
project_urls =
    Bug Tracker = https://github.com/aleximmer/Laplace/issues
description = laplace - Laplace approximations for deep learning
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
packages = find:
setup_requires =
  setuptools_scm
# Dependencies of the project (semicolon/line-separated):
install_requires =
    torch >= 2.0
    torchvision
    torchaudio
    backpack-for-pytorch
    asdl @ git+https://github.com/kazukiosawa/asdl@011a942
    # Note: `asdfghjkl == 0.1a2` is vendored in `laplace.third_party.asdfghjkl`.
    torchmetrics
    opt_einsum
    curvlinops-for-pytorch @ git+https://github.com/f-dangel/curvlinops
python_requires = >=3.9

[options.packages.find]
exclude = tests*

[options.package_data]
laplace =
    py.typed
laplace.third_party =
    asdfghjkl.LICENSE

###############################################################################
#                           Development dependencies                          #
###############################################################################

[options.extras_require]
# Dependencies needed for development
dev =
    ruff
    %(tests)s
    %(docs)s

# Dependencies needed to run the tests
tests =
    pytest
    pytest-cov
    pytest-mock
    coveralls
    scipy

# Dependencies needed to build/view the documentation
docs =
    matplotlib
    pdoc3

all =
    laplace-torch[dev]
    laplace-torch[tests]
    laplace-torch[docs]

